--- a/tippingApp.json
+++ b/tippingApp.json
@@ -1,5 +1,9 @@
 {
 	"name-list": [
 		"\n              Grym\n          "
-	]
+	],
+	"member": {
+		"fullName": "Grym",
+		"email": "Grym@mangakino.co.nz"
+	}
 }
