--- a/tippingApp.json
+++ b/tippingApp.json
@@ -1,7 +1,7 @@
 {
 	"member": [
 		{
-			"fullName": "Grym",
+			"fullName": "Graham",
 			"email": "Grym@mangakino.co.nz",
 			"status": "Active"
 		},
