--- a/tippingApp.json
+++ b/tippingApp.json
@@ -9,6 +9,11 @@
 			"fullName": "Lyn",
 			"email": "lyn@mangakino.co.nz",
 			"status": "Active"
+		},
+		{
+			"fullName": "Norm",
+			"email": "norm@mango.,co.nz",
+			"status": "Active"
 		}
 	]
 }
