--- a/tippingApp.json
+++ b/tippingApp.json
@@ -3,7 +3,7 @@
 		{
 			"fullName": "Grym",
 			"email": "Grym@mangakino.co.nz",
-			"status": "InActive"
+			"status": "Inactive"
 		},
 		{
 			"fullName": "Lyn",
